[gd_scene load_steps=5 format=3 uid="uid://c6u6gum1ef45g"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_wvch2"]
[ext_resource type="SpriteFrames" uid="uid://cbvd52n3vc75b" path="res://entities/player/player_animation.tres" id="2_q11si"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckp37"]
size = Vector2(42, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oymjp"]
size = Vector2(42, 5.625)

[node name="Player" type="RigidBody2D"]
collision_mask = 0
script = ExtResource("1_wvch2")

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("2_q11si")
animation = &"jump"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_ckp37")

[node name="JumpArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2(0, 42)
shape = SubResource("RectangleShape2D_oymjp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
